Try to solve white space between skill and home section

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     content: "";
     position: absolute;
     background: url('https://source.unsplash.com/1600x900/?coder') no-repeat center center/cover;
-    height: 100%;
+    height: 100vh;
     width: 99.7%;
     z-index: -1;
     opacity: 0.5;
